Quorum3/Library/Tests/Inheritance/Pass/BSolo.quorum
class B 
    action Main
        
    end
end