Quorum3/Library/Tests/Inheritance/Fail/BadTemplate.quorum
class Main 
    action Main
        TemplateA<text, integer> bob
    end
end